added /registration-for-test
